# LUCKYBEAM

./: .gitignore  README.md  pyproject.toml
src/lbeam/: __init__.py  cli.py
tests/: test-search.py  test_cli.py  test_presets.py
